# CPP-Design-Patterns

./: 00_2Singleton_Pattern.cpp  00_Singleton Pattern.cpp  00_Singleton Pattern_2.cpp  00_Singleton_Pattern_1.cpp  01_Factory Pattern.cpp  02_Builder Pattern.cpp  03_Prototype Pattern.cpp  04_Adapater Pattern.cpp  05_Bridge_Pattern.cpp  06_Composite Pattern.cpp  CMakeLists.txt  README.md
19_Observer Pattern/: CMakeLists.txt  agents.cpp  agents.h  main.cpp  observer.cpp  observer.h
